Update CAH cards post.

--- a/_posts/2015-02-28-cah-cards.md
+++ b/_posts/2015-02-28-cah-cards.md
@@ -27,7 +27,7 @@ They came out pretty well! I have a few nitpicks, but overall they look very pro
 On close inspection, they do suffer in comparison to the official cards, and I think I shall be making some changes to the generator to hopefully fix some of the issues.
 
 ##### Resolution #####
-My first nitpick is they came out slightly grainy. The most noticeable distortion is in the logo on the bottom left of the cards, which uses very thin lines to create the boxes. The logo is much better defined on the official cards. Currently, my generator creates 1200 DPI PNG images, which may not have been quite a high enough resolution. Since my generator uses vector based images, I can create as high a resolution output as I want, but I had thought 1200 DPI would suffice.
+My first nitpick is they came out slightly grainy. The most noticeable distortion is in the logo on the bottom left of the cards, which uses very thin lines to create the boxes. The logo is much better defined on the official cards. ~~Currently, my generator creates 1200 DPI PNG images, which may not have been quite a high enough resolution. Since my generator uses vector based images, I can create as high a resolution output as I want, but I had thought 1200 DPI would suffice.~~ The overly large DPI may have been the cause; I have since changed the DPI to 800, and make TIFF images.
 
 ##### Colors #####
 The color of the white background on the official cards is more of an off-white, while mine stand out as a full white. The reverse is true of the black cards; The official cards seem to use pure black for the background, while I used an off-black found in the pdf for black text and background. The off-whiteness and off-blackness of the white card backs seems to change in different CAH expansions. A third expansion white back is lighter overall, in text and background. I couldn't find an off-white in the PDF, and since it varies, I suspect it has more to do with the way CAH cards are printed. I think the only change I can make to the generator is to make the black backgrounds pure black. On close inspection, I do believe the black text on the white cards matches the off-black I am using, so I'll leave that alone.
