cach-cards: Fix grammatical error

--- a/_posts/2015-02-28-cah-cards.md
+++ b/_posts/2015-02-28-cah-cards.md
@@ -16,7 +16,7 @@ The base game for CAH is released under a Creative Commons license and is distri
 ##### Creation #####
 In my generator, I start with base SVG images for the different card faces: white backs, black backs, white fronts, black pick 1 fronts, black pick 2 fronts, and black pick 3 fronts. I created them using bits of media from the PDF and measurements from official CAH cards. Those can be customized as well, which is useful for denoting your cards as an expansion. The CAH expansion cards place a number or an image inside the third square in the logo placed on the bottom left of the card. In my cards, I placed an image of a cat, so they may be differentiated from the the official cards.
 
-The generator takes in a newline separated text file and does a bunch of [awk](http://www.gnu.org/software/gawk/manual/gawk.html) magic to determine what type of card the text is for, determine the proper length of blanks, and formatting and then stuff that text inside a copy of the SVG file. The text file is obviously customizable but so are the resulting SVG images, named as numbers in the order they were created in an out_svg directory. Before the last step of converting to PNG, you can edit each card in [Inkscape](https://inkscape.org). This is useful for adjusting formatting or creating special cards that consist of more than just text. For my deck, it was useful in creating an especially elaborate inside joke card that acts as a flagship for the deck.
+The generator takes in a newline separated text file and does a bunch of [awk](http://www.gnu.org/software/gawk/manual/gawk.html) magic to determine what type of card the text is for, determine the proper length of blanks, format, and stuff the text inside a copy of the SVG file. The text file is obviously customizable but so are the resulting SVG images, named as numbers in the order they were created in an out_svg directory. Before the last step of converting to PNG, you can edit each card in [Inkscape](https://inkscape.org). This is useful for adjusting formatting or creating special cards that consist of more than just text. For my deck, it was useful in creating an especially elaborate inside joke card that acts as a flagship for the deck.
 
 The result:
 ![Custom CAH cards](/assets/img/cah_cards.jpg)
