Replace Jekyll with pandoc and Make

--- a/posts/2015-02-28-cah-cards.md
+++ b/posts/2015-02-28-cah-cards.md
@@ -1,10 +1,9 @@
 ---
 title: Custom CAH Cards
-layout: article
 category: projects
 description: Custom cards for the game Cards Against Humanity
+published: 2015-02-28
 ---
-## Custom CAH Cards ##
 I made a custom expansion deck for [Cards Against Humanity](http://cardsagainsthumanity.com/)! I used my own [project on GitHub](https://github.com/kcghost/CAH-Builder) that takes a newline separated text file and creates high resolution PNG images to be used at [MakePlayingCards](http://www.makeplayingcards.com/).
 
 [Cards Against Humanity](http://cardsagainsthumanity.com/) (CAH) is a card game that involves two types of cards, black and white. One black card is drawn per round, and its text is either a question or a statement with up to three blanks. Players must use the white cards to answer the question or fill in the blanks. It has a certain notoriety as most of the cards are very politically incorrect or use a lot of shock humor.
