posts: minor accessibility updates

--- a/posts/2015-02-28-cah-cards.md
+++ b/posts/2015-02-28-cah-cards.md
@@ -17,7 +17,7 @@ In my generator, I start with base SVG images for the different card faces: whit
 
 The generator takes in a newline separated text file and does a bunch of [awk](http://www.gnu.org/software/gawk/manual/gawk.html) magic to determine what type of card the text is for, determine the proper length of blanks, format, and stuff the text inside a copy of the SVG file. The text file is obviously customizable but so are the resulting SVG images, named as numbers in the order they were created in an out_svg directory. Before the last step of converting to PNG, you can edit each card in [Inkscape](https://inkscape.org). This is useful for adjusting formatting or creating special cards that consist of more than just text. For my deck, it was useful in creating an especially elaborate inside joke card that acts as a flagship for the deck.
 
-![Comparison of Official and Custom CAH cards](/assets/img/cah_cards.jpg)
+![Comparison of Official and Custom CAH cards. Both card backs and card fronts of black and white cards are compared.](/assets/img/cah_cards.jpg "I heard Mew evolves into William Shatner at level 150" "Comparison of Official and Custom CAH cards")
 
 They came out pretty well! I have a few nitpicks, but overall they look very professional and certainly usable. The placement of the text and logo seems exactly correct, and everything is bold enough to read very clearly. I personally know there is a slight difference in the font used for my cards (Helvetica vs. Nimbus Sans L Bold), but there is no noticeable difference.
 
