update hidjump post

--- a/posts/2025-05-13-hidjump.md
+++ b/posts/2025-05-13-hidjump.md
@@ -4,6 +4,7 @@ layout: article
 category: blog
 description: Controlling a PC with USB gadget shenanigans
 published: 2025-05-13
+updated: 2025-06-09
 ---
 
 I set up a mini-PC near my desk for playing around with [UKI images](https://wiki.archlinux.org/title/Unified_kernel_image). I mounted a monitor to the wall for it, but rather than add a keyboard and mouse I want to control it from my normal desktop PC.
@@ -43,8 +44,8 @@ list_hidraw() {
 }
 
 usage() {
-    echo "${0} <keyboard hidraw device> <mouse hidraw device> <ssh target>"
-    echo "i.e. ${0} hidraw0 hidraw1 raspberrypi.local"
+    echo "${0} <keyboard hidraw name> <mouse hidraw name> <ssh target>"
+    echo "i.e. ${0} \"Telink Wireless Gaming Keyboard\" \"Logitech G305\" raspberrypi.local"
     echo ""
 }
 
@@ -79,6 +80,26 @@ manufacturer="hidjump"
 product="hidjump keyboard/mouse"
 
 gadget_name="hidjump"
+
+# treat multiple launches as toggle
+pidfile="/tmp/hidjump.pid"
+# there can only be one!
+if [ -f "${pidfile}" ]; then
+    pid=$(cat "${pidfile}")
+    if ps -p "${pid}" >/dev/null; then
+        echo "hidjump already running! killing it!"
+        kill "${pid}"
+        exit 1
+    fi
+fi
+echo $$ >"${pidfile}"
+
+cleanup() {
+    # kill the whole process group, including the background shells
+    kill 0
+    rm -f "${pidfile}"
+}
+trap cleanup EXIT
 
 ssh -T "${target}" /bin/bash <<EOF
 sudo su
@@ -158,7 +179,7 @@ EOF
     # Send a blank report to clear out modifiers like Ctrl after interrupt
     cat "/dev/${keyboard}" | \
     ssh -T "${target}" \
-    "sudo tee /dev/hidg0 >/dev/null; echo -ne \"\0\0\0\0\0\0\0\0\" | sudo tee /dev/hidg0 >/dev/null"
+    "sudo tee /dev/hidg0 >/dev/null; printf \"%16s\" | tr ' ' '\0' | sudo tee /dev/hidg0 >/dev/null"
 ) &
 (
     cat "/dev/${mouse}" | \
@@ -166,6 +187,7 @@ EOF
 ) &
 
 wait
+cleanup
 
 ```
 
@@ -174,3 +196,22 @@ This works remarkably well. I was worried this might not work at the BIOS level 
 It's not without *some* jank of course. For one, none of the keyboard and mouse input is being eaten. It goes to both the normal desktop *and* to the controlled PC, so it's best to switch to a empty workspace while it's in effect. I also found quitting the script with [[ [[Ctrl]] + [[C]] ]] would leave [[ Ctrl ]] "held" on the PC. To solve that I needed to echo a blank report. And because it's forwarding a specific keyboard and mouse and not "input" generally it doesn't work in a VNC session.
 
 But that's fine for me. After all it saves me from rolling three feet in a desk chair.
+
+## Addendum
+
+I updated the script to support toggling the daemon on and off, making it very easy to keybind the functionality.
+Since then I have been using this regularly and ran into a fun little pitfall that nearly had me pulling my hair out.
+
+I'm working a lot with a simple Linux framebuffer console on the controlled mini-PC end.
+Every now and then I would come back to the console and found it "unresponsive".
+It responded to VT shifts i.e. [[ [[Ctrl]] + [[Alt]] [[F1]] ]], but typing on terminal echoed no characters.
+I did notice the cursor blinking pattern change when keys were typed however.
+
+Eventually I tried plugging in an actual keyboard that had the benefit of keyboard LEDs and saw that Scroll Lock was enabled.
+"Scroll Lock" in a VT setting actually stops the console output and leads to exactly this behavior. Turning it off again solves the issue immediately. I thought it was hung up, but it turned out to just be Scroll Lock.
+
+So then I thought it must be a bug in the script. Perhaps something about not cleaning up quite right when stopping. I don't even have a Scroll Lock key on my keyboard, so it must be badly interpreting a bad packet.
+
+As it turns out, no. You can *also* [enter scroll lock mode](https://unix.stackexchange.com/questions/137842/what-is-the-point-of-ctrl-s) with [[ [[Ctrl]] + [[S]]]] (and exit it with [[ [[Ctrl]] + [[Q]]]]).
+Since the keyboard is functional on both computers at once I was frequently working with a text editor on my "main" PC.
+And every now and then I saved the file. 🤦
